ui: fix overlapping btn in upload list
closes #720

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
@@ -274,7 +274,6 @@ body {
 // Deposits page
 
 .item.deposits-list-item {
-
   .ui.grid .checkbox-column {
     display: flex;
     align-items: center;
@@ -294,6 +293,10 @@ body {
   .stats > span {
     padding-right: 0.5em;
   }
+}
+
+.ui.items > .item .extra.labels-actions {
+  margin-bottom: 0.75em;
 }
 
 .ui.label.access-right {
